<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.Sign_In"
    android:background="@drawable/gradient_dark">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="Open Sans"
        android:textColor="#2E2E2E"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:id="@+id/app_name_sign_up_page"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:fontFamily="Open Sans"
        android:backgroundTint="#2E2E2E"
        android:textColorHint="#2E2E2E"
        android:textColor="#2E2E2E"
        android:padding="20dp"
        android:inputType="textEmailAddress"
        android:layout_below="@id/app_name_sign_up_page"
        android:id="@+id/email_address_sign_in"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_sign_in"
        android:textColor="#2E2E2E"
        android:fontFamily="Open Sans"
        android:textColorHint="#2E2E2E"
        android:backgroundTint="#2E2E2E"
        android:padding="20dp"
        android:inputType="textPassword"
        android:layout_below="@+id/email_address_sign_in"
        android:id="@+id/email_password_sign_in"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_password_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login_sign_in"
        android:fontFamily="Open Sans"
        android:textColor="#2E2E2E"
        android:background="@drawable/round_button"
        android:id="@+id/login_button_sign_in"
        android:textSize="21sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_yet"
        android:fontFamily="Open Sans"
        android:textColor="#2E2E2E"
        android:layout_below="@+id/login_button_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:id="@+id/no_account_yet"/>
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>